--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <meta name="description" content="p5 typescript starter" />
+        <meta name="description" content="p5 learning sketches" />
         <link rel="stylesheet" type="text/css" href="dist/css/index.css" />
-        <title>p5 typescript starter</title>
+        <title>p5 learning sketches</title>
     </head>
 
     <body>
