build: replace snowpack w/ vite

--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <meta name="description" content="p5 learning sketches" />
-        <link rel="stylesheet" type="text/css" href="dist/css/index.css" />
         <title>p5 learning sketches</title>
     </head>
 
     <body>
         <div id="sketch"></div>
-        <script type="module" src="dist/index.js"></script>
+        <script type="module" src="/src/index.ts"></script>
     </body>
 </html>
